--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="front"></div>
+    <div class="front">
+      <div class="nav-bar">
+        <div class="banner">
+          <img src="images/logo.png" alt="" class="logo" />
+          <p class="brand-text">Mobirise</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
