--- a/index.html
+++ b/index.html
@@ -2,23 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equ`iv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/normalize.css" />
   </head>
   <body>
     <div class="front">
-      <div class="nav-bar">
-        <div class="banner">
+      <header class="nav-bar">
+        <div class="brand-logo">
           <img src="images/logo.png" alt="" class="logo" />
-          <p class="brand-text">Mobirise</p>
+          <a href="/" class="link brand-link brand-name">Mobirise</a>
         </div>
+        <div class="language-btn">
+          <img src="images/download (1).png" alt="" class="flag" />
+          <button class="btn-layout btn-primary">
+            <a href="/" class="link link-sale">HUGE SALE - 97% OFF!</a>
+          </button>
+        </div>
+      </header>
+      <div class="main-heading">
+        <p class="heading-theme">FREE WEBSITE BUILDER SOFTWARE</p>
+      </div>
+      <div class="theme-desc">
+        <p class="desc">
+          Create fast, mobile and high-<br />ranking websites! No-code and<br />
+          free.
+        </p>
+      </div>
+      <div class="downloads">
+        <button class="windows btn-layout btn-primary">
+          <a href="/" class="link">Download for Windows</a>
+        </button>
+        <button class="mac btn-layout btn-secondary">
+          <a href="/" class="link">Download for Mac</a>
+        </button>
       </div>
     </div>
   </body>
