--- a/index.html
+++ b/index.html
@@ -45,6 +45,50 @@
           <a href="/" class="link">Download for Mac</a>
         </button>
       </div>
+      <div class="video-main-layout">
+        <video src="videos/top.webm" class="video-main" autoplay loop></video>
+      </div>
+    </div>
+    <div class="container-grid">
+      <div class="what container-layout">
+        <div class="container-heading-layout">
+          <p class="container-heading">What is Mobirise?</p>
+        </div>
+        <div class="container-content-layout">
+          <p class="container-content">
+            Mobirise is a free offline app for Windows and Mac to easily create
+            small/medium websites, landing pages, online resumes and portfolios.
+            4500+ beautiful website blocks, templates and themes help you to
+            start easily.
+          </p>
+        </div>
+      </div>
+      <div class="who container-layout">
+        <div class="container-heading-layout">
+          <p class="container-heading">Who is it for?</p>
+        </div>
+        <div class="container-content-layout">
+          <p class="container-content">
+            Mobirise is perfect for non-techies who are not familiar with the
+            intricacies of web design and prefer to work as visually as
+            possible. Also great for pro-coders for fast prototyping and small
+            customers' projects.
+          </p>
+        </div>
+      </div>
+      <div class="why container-layout">
+        <div class="container-heading-layout">
+          <p class="container-heading">Why Mobirise?</p>
+        </div>
+        <div class="container-content-layout">
+          <p class="container-content">
+            Key differences from traditional website builders: Minimalistic,
+            extremely easy-to-use interface; Mobile/Google-friendly, latest
+            website blocks and techniques "out-the-box"; Free for commercial and
+            non-profit use
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
