upto work heading

--- a/index.html
+++ b/index.html
@@ -90,5 +90,8 @@
         </div>
       </div>
     </div>
+    <div class="work-heading-layout">
+      <p class="work-heading">How Mobirise works</p>
+    </div>
   </body>
 </html>
