completed to download layout

--- a/index.html
+++ b/index.html
@@ -93,5 +93,117 @@
     <div class="work-heading-layout">
       <p class="work-heading">How Mobirise works</p>
     </div>
+    <div class="properties features">
+      <div class="property1 grid content">
+        <div class="property-desc-layout">
+          <p class="property-desc-heading">Drag blocks to page</p>
+          <p class="property-desc">
+            Start with creating a new website and picking up the theme. Then
+            expand the blocks panel with the big red "plus" button in the lower
+            right corner and start dragging the blocks you like.
+          </p>
+        </div>
+        <div class="property-video-layout">
+          <video
+            src="videos/mbr-1.webm"
+            class="property-video"
+            autoplay
+            loop
+          ></video>
+        </div>
+      </div>
+      <div class="property2 grid content">
+        <div class="property-video-layout">
+          <video
+            src="videos/mbr-2.webm"
+            class="property-video"
+            autoplay
+            loop
+          ></video>
+        </div>
+        <div class="property-desc-layout">
+          <p class="property-desc-heading">Edit and style inline</p>
+          <p class="property-desc">
+            Edit the content of each block just like you would in a regular text
+            editor, click on media elements to insert your own image, video or
+            icon.
+          </p>
+        </div>
+      </div>
+      <div class="property3 grid content">
+        <div class="property-desc-layout">
+          <p class="property-desc-heading">Set block parameters</p>
+          <p class="property-desc">
+            Set the appropriate options through the Parameters Panel being
+            brought out by the blue "gear" button.
+          </p>
+        </div>
+        <div class="property-video-layout">
+          <video
+            src="videos/mbr-3.webm"
+            class="property-video"
+            autoplay
+            loop
+          ></video>
+        </div>
+      </div>
+      <div class="property4 grid content">
+        <div class="property-video-layout">
+          <video
+            src="videos/mbr-4.webm"
+            class="property-video"
+            autoplay
+            loop
+          ></video>
+        </div>
+        <div class="property-desc-layout">
+          <p class="property-desc-heading">Preview and publish</p>
+          <p class="property-desc">
+            Click on "Mobile View" in the website builer to check how your site
+            looks on different devices and publish to local drive, FTP or
+            Mobirise subdomain.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="amazing-layout">
+      <p class="amazing-heading">4500+ amazing blocks</p>
+    </div>
+    <div class="amazing-desc-layout">
+      <p class="amazing-desc">
+        Mobirise Creator offers 4500+ website blocks in
+        <span class="red-color">5 free</span> and
+        <span class="red-color">
+          100+ premium HTML themes and 300+ home page templates
+        </span>
+        that include sliders, galleries with lightbox, articles, counters,
+        countdowns, full-screen intros, images & videos, features, data tables &
+        pricing tables, progress bar & cycles, timelines, tabs & accordions,
+        call-to-action, forms, Google maps, social blocks, testimonials,
+        footers, free icons and more. Blocks are designed considering the latest
+        web design trends, and they are flexible<br />
+        and full of customizing options.
+      </p>
+    </div>
+    <img src="images/temps-3.webp" alt="" class="mul-image" />
+    <div class="download-block">
+      <p class="work-heading" style="text-align: center; padding-top: 10rem">
+        FREE DOWNLOAD
+      </p>
+      <p class="amazing-desc">
+        Mobirise Free Website Design Software is free for both personal and
+        commercial use. Download now and use Free Website Maker for your own or
+        client's websites without restrictions.
+      </p>
+      <div class="downloads" style="padding-bottom: 10rem">
+        <button class="windows btn-layout btn-primary">
+          <a href="/" class="link">Download for Windows</a>
+        </button>
+        <button class="mac btn-layout btn-secondary">
+          <a href="/" class="link">Download for Mac</a>
+        </button>
+      </div>
+    </div>
+    
   </body>
 </html>
