completed to features block

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="work-heading-layout">
       <p class="work-heading">How Mobirise works</p>
     </div>
-    <div class="properties features">
+    <div class="properties">
       <div class="property1 grid content">
         <div class="property-desc-layout">
           <p class="property-desc-heading">Drag blocks to page</p>
@@ -204,6 +204,84 @@
         </button>
       </div>
     </div>
-    
+    <div class="features1 grid">
+      <div class="features-desc-layout">
+        <p
+          class="property-desc-heading"
+          style="text-align: right; padding-right: 4rem; margin-top: 10rem"
+        >
+          You don't have<br />
+          to code
+        </p>
+        <p
+          class="property-desc"
+          style="
+            margin-left: 10rem;
+            font-size: 2rem;
+            text-align: right;
+            padding-right: 4rem;
+            line-height: 3rem;
+          "
+        >
+          Mobirise is an easy and simple free<br />
+          website creator - just drop site elements to<br />
+          your page, add content and style it to look<br />
+          the way you like.
+        </p>
+      </div>
+      <div class="features-image-layout">
+        <img src="images/edit-3.webp" alt="" class="feature1-image" />
+      </div>
+    </div>
+    <div class="features2 grid">
+      <div class="features-image-layout">
+        <img src="images/edit2-3.webp" alt="" class="feature2-image" />
+      </div>
+      <div class="features-desc-layout">
+        <p class="property-desc-heading">
+          Make your site<br />
+          unique
+        </p>
+        <p
+          class="property-desc"
+          style="font-size: 2rem; line-height: 3rem; padding-right: 35rem"
+        >
+          Website Builder Software offers a huge collection of 4500+ website
+          blocks, templates and themes with thousands flexible options. Combine
+          blocks from different themes to create a unique mix.
+        </p>
+      </div>
+    </div>
+    <div class="features3 grid">
+      <div class="features-desc-layout">
+        <p
+          class="property-desc-heading"
+          style="text-align: right; padding-right: 4rem; margin-top: 10rem"
+        >
+          Automagically<br />
+          mobile
+        </p>
+        <p
+          class="property-desc"
+          style="
+            margin-left: 10rem;
+            font-size: 2rem;
+            text-align: right;
+            padding-right: 4rem;
+            padding-left: 20rem;
+            line-height: 3rem;
+          "
+        >
+          Mobile web traffic overtook desktop one in 2016 and will only grow in
+          2021, and that's why it's important to create websites that look good
+          on all devices. No special actions required, all sites you make with
+          the Builder are mobile-friendly. You don't have to create a special
+          mobile version of your website, it will adapt automagically.
+        </p>
+      </div>
+      <div class="features-image-layout">
+        <img src="images/mobile-1.webp" alt="" class="feature3-image" />
+      </div>
+    </div>
   </body>
 </html>
