Completed to utube link

--- a/index.html
+++ b/index.html
@@ -283,5 +283,19 @@
         <img src="images/mobile-1.webp" alt="" class="feature3-image" />
       </div>
     </div>
+    <div class="youtube-block">
+      <p class="work-heading" style="text-align: center; padding-top: 10rem">
+        It's easy and simple
+      </p>
+      <p
+        class="amazing-desc"
+        style="margin-left: 15rem; margin-right: 15rem; text-align: center"
+      >
+        Cut down the development time with drag-and-drop website builder. Drop
+        the blocks into the page, edit content inline and publish - no technical
+        skills required. Watch the video below to see the Mobirise in action.
+      </p>
+      <iframe src="https://youtu.be/JIgIhgrAqGg"></iframe>
+    </div>
   </body>
 </html>
