--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <div class="front">
@@ -29,15 +31,17 @@
         </div>
       </header>
       <div class="main-heading">
-        <p class="heading-theme">FREE WEBSITE BUILDER SOFTWARE</p>
+        <p class="heading-theme" data-aos="fade-up">
+          FREE WEBSITE BUILDER SOFTWARE
+        </p>
       </div>
-      <div class="theme-desc">
+      <div class="theme-desc" data-aos="fade-up">
         <p class="desc">
           Create fast, mobile and high-<br />ranking websites! No-code and<br />
           free.
         </p>
       </div>
-      <div class="downloads">
+      <div class="downloads" data-aos="fade-up">
         <button class="windows btn-layout btn-primary">
           <a href="/" class="link">Download for Windows</a>
         </button>
@@ -45,11 +49,11 @@
           <a href="/" class="link">Download for Mac</a>
         </button>
       </div>
-      <div class="video-main-layout">
+      <div class="video-main-layout" data-aos="fade-up">
         <video src="videos/top.webm" class="video-main" autoplay loop></video>
       </div>
     </div>
-    <div class="container-grid">
+    <div class="container-grid" data-aos="fade-up">
       <div class="what container-layout">
         <div class="container-heading-layout">
           <p class="container-heading">What is Mobirise?</p>
@@ -91,11 +95,11 @@
       </div>
     </div>
     <div class="work-heading-layout">
-      <p class="work-heading">How Mobirise works</p>
+      <p class="work-heading" data-aos="slide-left">How Mobirise works</p>
     </div>
     <div class="properties">
       <div class="property1 grid content">
-        <div class="property-desc-layout">
+        <div class="property-desc-layout" data-aos="fade-up">
           <p class="property-desc-heading">Drag blocks to page</p>
           <p class="property-desc">
             Start with creating a new website and picking up the theme. Then
@@ -103,7 +107,7 @@
             right corner and start dragging the blocks you like.
           </p>
         </div>
-        <div class="property-video-layout">
+        <div class="property-video-layout" data-aos="slide-left">
           <video
             src="videos/mbr-1.webm"
             class="property-video"
@@ -113,7 +117,7 @@
         </div>
       </div>
       <div class="property2 grid content">
-        <div class="property-video-layout">
+        <div class="property-video-layout" data-aos="slide-right">
           <video
             src="videos/mbr-2.webm"
             class="property-video"
@@ -121,7 +125,7 @@
             loop
           ></video>
         </div>
-        <div class="property-desc-layout">
+        <div class="property-desc-layout" data-aos="fade-up">
           <p class="property-desc-heading">Edit and style inline</p>
           <p class="property-desc">
             Edit the content of each block just like you would in a regular text
@@ -131,14 +135,14 @@
         </div>
       </div>
       <div class="property3 grid content">
-        <div class="property-desc-layout">
+        <div class="property-desc-layout" data-aos="fade-up">
           <p class="property-desc-heading">Set block parameters</p>
           <p class="property-desc">
             Set the appropriate options through the Parameters Panel being
             brought out by the blue "gear" button.
           </p>
         </div>
-        <div class="property-video-layout">
+        <div class="property-video-layout" data-aos="slide-left">
           <video
             src="videos/mbr-3.webm"
             class="property-video"
@@ -148,7 +152,7 @@
         </div>
       </div>
       <div class="property4 grid content">
-        <div class="property-video-layout">
+        <div class="property-video-layout" data-aos="slide-right">
           <video
             src="videos/mbr-4.webm"
             class="property-video"
@@ -156,7 +160,7 @@
             loop
           ></video>
         </div>
-        <div class="property-desc-layout">
+        <div class="property-desc-layout" data-aos="fade-up">
           <p class="property-desc-heading">Preview and publish</p>
           <p class="property-desc">
             Click on "Mobile View" in the website builer to check how your site
@@ -166,10 +170,10 @@
         </div>
       </div>
     </div>
-    <div class="amazing-layout">
+    <div class="amazing-layout" data-aos="fade-up">
       <p class="amazing-heading">4500+ amazing blocks</p>
     </div>
-    <div class="amazing-desc-layout">
+    <div class="amazing-desc-layout" data-aos="fade-up">
       <p class="amazing-desc">
         Mobirise Creator offers 4500+ website blocks in
         <span class="red-color">5 free</span> and
@@ -185,17 +189,24 @@
         and full of customizing options.
       </p>
     </div>
-    <img src="images/temps-3.webp" alt="" class="mul-image" />
-    <div class="download-block">
-      <p class="work-heading" style="text-align: center; padding-top: 10rem">
+
+    <div class="webp" data-aos="fade-up ease-out">
+      <img src="images/temps-3.webp" alt="" class="mul-image" />
+    </div>
+    <div class="download-block" data-aos="fade-up">
+      <p
+        class="work-heading"
+        style="text-align: center; padding-top: 10rem"
+        data-aos="fade-up"
+      >
         FREE DOWNLOAD
       </p>
-      <p class="amazing-desc">
+      <p class="amazing-desc" data-aos="fade-up">
         Mobirise Free Website Design Software is free for both personal and
         commercial use. Download now and use Free Website Maker for your own or
         client's websites without restrictions.
       </p>
-      <div class="downloads" style="padding-bottom: 10rem">
+      <div class="downloads" style="padding-bottom: 10rem" data-aos="fade-up">
         <button class="windows btn-layout btn-primary">
           <a href="/" class="link">Download for Windows</a>
         </button>
@@ -205,7 +216,7 @@
       </div>
     </div>
     <div class="features1 grid">
-      <div class="features-desc-layout">
+      <div class="features-desc-layout" data-aos="fade-up">
         <p
           class="property-desc-heading"
           style="text-align: right; padding-right: 4rem; margin-top: 10rem"
@@ -229,15 +240,15 @@
           the way you like.
         </p>
       </div>
-      <div class="features-image-layout">
+      <div class="features-image-layout" data-aos="slide-right">
         <img src="images/edit-3.webp" alt="" class="feature1-image" />
       </div>
     </div>
     <div class="features2 grid">
-      <div class="features-image-layout">
+      <div class="features-image-layout" data-aos="slide-left">
         <img src="images/edit2-3.webp" alt="" class="feature2-image" />
       </div>
-      <div class="features-desc-layout">
+      <div class="features-desc-layout" data-aos="fade-up">
         <p class="property-desc-heading">
           Make your site<br />
           unique
@@ -253,7 +264,7 @@
       </div>
     </div>
     <div class="features3 grid">
-      <div class="features-desc-layout">
+      <div class="features-desc-layout" data-aos="fade-up">
         <p
           class="property-desc-heading"
           style="text-align: right; padding-right: 4rem; margin-top: 10rem"
@@ -279,17 +290,22 @@
           mobile version of your website, it will adapt automagically.
         </p>
       </div>
-      <div class="features-image-layout">
+      <div class="features-image-layout" data-aos="slide-right">
         <img src="images/mobile-1.webp" alt="" class="feature3-image" />
       </div>
     </div>
-    <div class="youtube-block">
-      <p class="work-heading" style="text-align: center; padding-top: 10rem">
+    <div class="youtube-block" data-aos="fade-up">
+      <p
+        class="work-heading"
+        style="text-align: center; padding-top: 10rem"
+        data-aos="fade-up"
+      >
         It's easy and simple
       </p>
       <p
         class="amazing-desc"
         style="margin-left: 15rem; margin-right: 15rem; text-align: center"
+        data-aos="fade-up"
       >
         Cut down the development time with drag-and-drop website builder. Drop
         the blocks into the page, edit content inline and publish - no technical
@@ -297,5 +313,77 @@
       </p>
       <iframe src="https://youtu.be/JIgIhgrAqGg"></iframe>
     </div>
+    <footer class="final-footer">
+      <div class="grid-footer">
+        <div class="footer-logo-layout">
+          <img
+            src="images/logo.png"
+            alt=""
+            class="footer-logo"
+            data-aos="slide-right"
+          />
+        </div>
+        <div class="links1" data-aos="slide-down">
+          <ul class="footer-lists">
+            <li class="footer-links-layout">
+              <a href="/" class="footer-links">About Mobirise</a>
+            </li>
+            <li class="footer-links-layout">
+              <a href="/" class="footer-links">Help</a>
+            </li>
+            <li class="footer-links-layout">
+              <a href="/" class="footer-links">Forums</a>
+            </li>
+            <li class="footer-links-layout">
+              <a href="/" class="footer-links">support@mobirise.com</a>
+            </li>
+            <li>
+              <p class="footer-list-desc">
+                Flight Forum 40, 5657 DB Eindhoven, Netherlands<br />
+                Updated on Aug 24, 2021
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="links2" data-aos="slide-down">
+          <ul class="footer-lists">
+            <li><p class="footer-list-desc">Links</p></li>
+            <li class="footer-links-layout">
+              <a href="/" class="footer-links">Bootstrap Builder</a>
+            </li>
+            <li class="footer-links-layout">
+              <a href="/" class="footer-links">Website Design Software</a>
+            </li>
+            <li class="footer-links-layout">
+              <a href="/" class="footer-links">offline Website Builder</a>
+            </li>
+            <li class="footer-links-layout">
+              <a href="/" class="footer-links">Web Page Maker</a>
+            </li>
+            <li class="footer-links-layout">
+              <a href="/" class="footer-links">Website Maker</a>
+            </li>
+            <li class="footer-links-layout">
+              <a href="/" class="footer-links">How to create a website</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="break-line">
+        <hr />
+      </div>
+      <div class="trade">
+        <p class="trade-mark">
+          Mobirise&reg; is a registered trademark. &copy; 2021 Mobirise Free
+          Website Builder Software - All Rights Reserved.
+          <span class="red-color">Terms</span>,
+          <span class="red-color">Privacy</span>
+        </p>
+      </div>
+    </footer>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
