final commit with muted elements

--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
         </button>
       </div>
       <div class="video-main-layout" data-aos="fade-up">
-        <video src="videos/top.webm" class="video-main" autoplay loop></video>
+        <video
+          src="videos/top.webm"
+          class="video-main"
+          autoplay
+          loop
+          muted
+        ></video>
       </div>
     </div>
     <div class="container-grid" data-aos="fade-up">
@@ -113,6 +119,7 @@
             class="property-video"
             autoplay
             loop
+            muted
           ></video>
         </div>
       </div>
@@ -123,6 +130,7 @@
             class="property-video"
             autoplay
             loop
+            muted
           ></video>
         </div>
         <div class="property-desc-layout" data-aos="fade-up">
@@ -148,6 +156,7 @@
             class="property-video"
             autoplay
             loop
+            muted
           ></video>
         </div>
       </div>
@@ -158,6 +167,7 @@
             class="property-video"
             autoplay
             loop
+            muted
           ></video>
         </div>
         <div class="property-desc-layout" data-aos="fade-up">
