final commit with nav bar

--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
   </head>
   <body>
     <div class="front">
-      <header class="nav-bar">
-        <div class="brand-logo">
+      <nav class="bar">
+        <div class="relative">
           <img src="images/logo.png" alt="" class="logo" />
-          <a href="/" class="link brand-link brand-name">Mobirise</a>
+          <a href="/" class="link brand-link">Mobirise</a>
+          <span class="right-align">
+            <img src="images/download (1).png" alt="" class="flag" />
+            <button class="btn-layout btn-primary">
+              <a href="/" class="link link-sale">HUGE SALE - 97% OFF!</a>
+            </button>
+          </span>
         </div>
-        <div class="language-btn">
-          <img src="images/download (1).png" alt="" class="flag" />
-          <button class="btn-layout btn-primary">
-            <a href="/" class="link link-sale">HUGE SALE - 97% OFF!</a>
-          </button>
-        </div>
-      </header>
+      </nav>
       <div class="main-heading">
         <p class="heading-theme" data-aos="fade-up">
           FREE WEBSITE BUILDER SOFTWARE
